--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-project-pf-a",
+  "name": "angular-admin-pf-a",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.1",
+    "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -18,16 +18,15 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@syncfusion/ej2-angular-schedule": "^20.3.58",
-    "@types/jwt-decode": "^3.1.0",
-    "autoprefixer": "^10.4.7",
+    "@syncfusion/ej2-angular-calendars": "^20.3.56",
+    "@syncfusion/ej2-angular-dropdowns": "^20.3.60",
+    "@syncfusion/ej2-angular-schedule": "^20.3.58-ngcc",
+    "@syncfusion/ej2-data": "^20.3.56",
     "jwt-decode": "^3.1.2",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^15.0.0",
-    "postcss": "^8.4.14",
     "rxjs": "~7.5.0",
-    "swiper": "^8.3.2",
-    "tailwindcss": "^3.1.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
