--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "@syncfusion/ej2-angular-calendars": "^20.3.56",
     "@syncfusion/ej2-angular-dropdowns": "^20.3.60",
+    "@syncfusion/ej2-angular-kanban": "^20.4.54",
     "@syncfusion/ej2-angular-schedule": "^20.3.58-ngcc",
     "@syncfusion/ej2-data": "^20.3.56",
     "jwt-decode": "^3.1.2",
